--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,7 +1,5 @@
 .chat {
-    display: flex;
-    flex-direction: column;
-    flex: 0.65;
+    width: 60vw;
 }
 
 .chat_header {
@@ -26,12 +24,13 @@
 }
 
 .chat_body {
-    flex: 1;
     background-image: url('./1.png');
     background-repeat: repeat;
     background-position: center;
+    background-size: contain;
     padding: 30px;
-    overflow: scroll;
+    overflow: auto;
+    height: 62%;
 }
 
 .chat_message {
@@ -41,7 +40,7 @@
     width: fit-content;
     border-radius: 10px;
     background-color: #ffffff;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .chat_receiver {
@@ -57,7 +56,7 @@
 .chat_name {
     position: absolute;
     top: -15px;
-    font-weight: 800;
+    font-weight: 750;
     font-size: xx-small;
 }
 
@@ -65,7 +64,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 62px;
+    height: 60px;
     border-top: 1px solid lightgray;
 }
 
@@ -75,11 +74,11 @@
 }
 
 .chat_footer > form > input {
-    flex: 1;
     outline-width: 0;
     border-radius: 30px;
     padding: 10px;
     border: none;
+    width: 100%;
 }
 
 .chat_footer > form > button {
@@ -89,4 +88,35 @@
 .chat_footer > .MuiSvgIcon-root {
     padding: 10px;
     color: gray;
+}
+
+@media (max-width: 767px) {
+    .chat {
+        width: 100%;
+    }
+    
+    .chat_header {
+        padding: 10px;
+        height: 14%;
+    }
+    
+    .chat_headerInfo > p {
+        display: none;
+    }
+
+    .chat_body {
+        height: 60%;
+        padding: 10px;
+        padding-top: 20px;
+    }
+    
+    .chat_message {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 375px) {
+    .chat_headerRight {
+        display: none;
+    }
 }
