--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
-.app {
-    display: grid;
-    place-items: center;
-    height: 100vh;
+body {
     background-color: #dadbd3;
 }
 
 .app_body {
     display: flex;
+    margin: auto;
+    margin-top: 30px;
     background-color: #ededed;
-    margin-top: -50px;
     height: 90vh;
     width: 90vw;
     box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 767px) {
+    .app_body {
+        display: flex;
+        height: 90vh;
+        width: 90vw;
+    }
 }
