--- a/src/Chat.css
+++ b/src/Chat.css
@@ -40,7 +40,7 @@
     width: fit-content;
     border-radius: 10px;
     background-color: #ffffff;
-    margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 .chat_receiver {
