--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,85 +1,88 @@
 .sidebar {
-    width: 30vw;
+  /* width: 30vw; */
+  display: flex;
+  flex-direction: column;
+  flex: 0.3;
 }
 
 .sidebar_header {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    border-right: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  border-right: 1px solid lightgray;
 }
 
 .sidebar_headerRight {
-    align-items: center;
-    min-width: 10vw;
+  align-items: center;
+  min-width: 10vw;
 }
 
 .sidebar_headerRight > .MuiSvgIcon-root {
-    margin-right: 2vw;
-    font-size: 30px !important;
+  margin-right: 2vw;
+  font-size: 30px !important;
 }
 
 .sidebar_lower {
-    background-color: white;
+  background-color: white;
 }
 
 .sidebar_search {
-    background-color: #f6f6f6;
-    height: 40px;
-    padding: 10px;
+  background-color: #f6f6f6;
+  height: 40px;
+  padding: 10px;
 }
 
 .sidebar_searchContainer {
-    display: flex;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    height: 35px;
-    border-radius: 20px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  height: 35px;
+  border-radius: 20px;
 }
 
 .sidebar_searchContainer > .MuiSvgIcon-root {
-    color: gray;
-    padding: 10px;
+  color: gray;
+  padding: 10px;
 }
 
 .sidebar_searchContainer > input {
-    border: none;
-    margin-left: 10px;
-    outline-width: 0;
-    width: 100%;
+  border: none;
+  margin-left: 10px;
+  outline-width: 0;
+  width: 100%;
 }
 
 .sidebar_chats {
-    background-color: white;
-    overflow: auto;
+  background-color: white;
+  overflow: auto;
 }
 
-@media (max-width:767px) {
-    .sidebar {
-        width: 30vw;
-    }
-    
-    .sidebar_header {
-        justify-content: center;
-    }
+@media (max-width: 767px) {
+  .sidebar {
+    width: 30vw;
+  }
 
-    .sidebar_headerRight {
-        display: none;
-    }
-    .sidebar_searchContainer {
-        width: 100%;
-    }
+  .sidebar_header {
+    justify-content: center;
+  }
 
-    .sidebar_searchContainer > input {
-        margin-left: -5px;
-    }
+  .sidebar_headerRight {
+    display: none;
+  }
+  .sidebar_searchContainer {
+    width: 100%;
+  }
 
-    .sidebar_searchContainer > .MuiSvgIcon-root {
-        padding: 5px;
-    }
+  .sidebar_searchContainer > input {
+    margin-left: -5px;
+  }
 
-    .sidebar_chats {
-        height: 60vh;
-    }
+  .sidebar_searchContainer > .MuiSvgIcon-root {
+    padding: 5px;
+  }
+
+  .sidebar_chats {
+    height: 60vh;
+  }
 }
