--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,122 +1,129 @@
 .chat {
-    width: 60vw;
+  /* width: 60vw; */
+  display: flex;
+  flex-direction: column;
+  flex: 0.7;
 }
 
 .chat_header {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
 }
 
 .chat_headerInfo {
-    flex: 1;
-    padding-left: 20px;
+  flex: 1;
+  padding-left: 20px;
 }
 
 .chat_headerInfo > h3 {
-    margin-bottom: 3px;
-    font-weight: 500;
+  margin-bottom: 3px;
+  font-weight: 500;
 }
 
 .chat_headerInfo > p {
-    color: gray;
+  color: gray;
 }
 
 .chat_body {
-    background-image: url('./1.png');
-    background-repeat: repeat;
-    background-position: center;
-    background-size: contain;
-    padding: 30px;
-    overflow: auto;
-    height: 62%;
+  background-image: url("./1.png");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+  padding: 30px;
+  overflow-y: scroll;
+  /* height: 70%; */
 }
 
 .chat_message {
-    position: relative;
-    font-size: 16px;
-    padding: 10px;
-    width: fit-content;
-    border-radius: 10px;
-    background-color: #ffffff;
-    margin-top: 30px;
+  position: relative;
+  font-size: 16px;
+  padding: 10px;
+  width: fit-content;
+  border-radius: 10px;
+  background-color: #ffffff;
+  margin-top: 30px;
 }
 
 .chat_receiver {
-    margin-left: auto;
-    background-color: #dcf8c6;
+  margin-left: auto;
+  background-color: #dcf8c6;
 }
 
 .chat_timestamp {
-    margin-left: 10px;
-    font-size: xx-small;
+  margin-left: 10px;
+  font-size: xx-small;
 }
 
 .chat_name {
-    position: absolute;
-    top: -15px;
-    font-weight: 750;
-    font-size: xx-small;
+  position: absolute;
+  top: -15px;
+  font-weight: 750;
+  font-size: xx-small;
 }
 
+/* footer */
 .chat_footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    border-top: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  border-top: 1px solid lightgray;
+  padding: 7px;
 }
 
 .chat_footer > form {
-    flex: 1;
-    display: flex;
+  flex: 1;
+  display: flex;
 }
 
 .chat_footer > form > input {
-    outline-width: 0;
-    border-radius: 30px;
-    padding: 10px;
-    border: none;
-    width: 100%;
+  outline-width: 0;
+  border-radius: 30px;
+  padding: 10px 20px;
+  border: none;
+  width: 100%;
+  font-size: 1.05rem;
 }
 
 .chat_footer > form > button {
-    display: none;
+  display: none;
 }
 
 .chat_footer > .MuiSvgIcon-root {
-    padding: 10px;
-    color: gray;
+  padding: 10px;
+  font-size: 1.8rem;
+  color: gray;
 }
 
 @media (max-width: 767px) {
-    .chat {
-        width: 100%;
-    }
-    
-    .chat_header {
-        padding: 10px;
-        height: 14%;
-    }
-    
-    .chat_headerInfo > p {
-        display: none;
-    }
+  .chat {
+    width: 100%;
+  }
 
-    .chat_body {
-        height: 60%;
-        padding: 10px;
-        padding-top: 20px;
-    }
-    
-    .chat_message {
-        font-size: 12px;
-    }
+  .chat_header {
+    padding: 10px;
+    height: 14%;
+  }
+
+  .chat_headerInfo > p {
+    display: none;
+  }
+
+  .chat_body {
+    height: 60%;
+    padding: 10px;
+    padding-top: 20px;
+  }
+
+  .chat_message {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 375px) {
-    .chat_headerRight {
-        display: none;
-    }
+  .chat_headerRight {
+    display: none;
+  }
 }
